Added start_precmd and stop_cmd.

--- a/files/webistrano.in
+++ b/files/webistrano.in
@@ -25,11 +25,10 @@ webistrano_user="${webistrano_user:-"www"}"
 name="webistrano"
 rcvar=${name}_enable
 
+webistrano_bind = ""
 if [ "$webistrano_ip" != "0.0.0.0" ]
     then
         webistrano_bind="-b ${webistrano_ip} "
-    else
-        webistrano_bind=""
 fi
 
 load_rc_config $name
@@ -38,6 +37,9 @@ command="%%PREFIX%%/ruby %%WWWDIR%%/script/server -d -p ${webistrano_port} ${web
 pidfile=/var/run/${name}.pid
 
 : ${webistrano_enable="NO"}
+
+start_precmd=pid_touch
+stop_cmd="KILL, KILL, KILL"
 
 pid_touch ()
 {
